--- a/index.html
+++ b/index.html
@@ -59,18 +59,12 @@
         .logo-icon {
             width: 40px;
             height: 40px;
-            background: var(--wit);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 5px;
         }
 
-        .logo-icon svg {
+        .logo-icon img {
             width: 100%;
             height: 100%;
-            fill: var(--bosgroen);
+            object-fit: contain;
         }
 
         nav ul {
@@ -285,15 +279,7 @@
         <nav>
             <div class="logo">
                 <div class="logo-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                        <circle cx="50" cy="50" r="45" fill="none" stroke="currentColor" stroke-width="5"/>
-                        <ellipse cx="35" cy="55" rx="18" ry="28" fill="currentColor"/>
-                        <circle cx="45" cy="28" r="6" fill="currentColor"/>
-                        <circle cx="55" cy="25" r="5" fill="currentColor"/>
-                        <circle cx="63" cy="24" r="4.5" fill="currentColor"/>
-                        <circle cx="70" cy="25" r="4" fill="currentColor"/>
-                        <circle cx="76" cy="27" r="3.5" fill="currentColor"/>
-                    </svg>
+                    <img src="logo.png" alt="Sierlijke Voeten Logo">
                 </div>
                 <span>Sierlijke Voeten</span>
             </div>
