--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
     <div class="container">
         <section id="diensten" class="section">
-            <h2>Onze Diensten</h2>
+            <h2>Mijn Diensten</h2>
             <p style="text-align: center; color: var(--bruin); max-width: 800px; margin: 0 auto 2rem;">
                 Gespecialiseerd in medische voetverzorging voor gezonde en comfortabele voeten
             </p>
@@ -308,7 +308,7 @@
             <div class="diensten-grid">
                 <div class="dienst-card">
                     <h3>Medische Pedicure</h3>
-                    <p>Professionele voetverzorging waarbij nagelriemen verzorgd worden, nagels worden geknipt en gevijld, en de voeten grondig worden gereinigd. Ideaal voor het behouden van gezonde voeten.</p>
+                    <p>Professionele voetverzorging waarbij nagelriemen verzorgd worden, nagels worden geknipt en gevijld, en de voeten grondig worden gereinigd. Ideaal voor het behouden van gezonde zachte voeten.</p>
                 </div>
 
                 <div class="dienst-card">
@@ -328,7 +328,7 @@
 
                 <div class="dienst-card">
                     <h3>Nagelproblematiek</h3>
-                    <p>Behandeling van ingegroeide nagels, dikke nagels en andere nagelklachten met deskundige zorg en advies voor thuisverzorging.</p>
+                    <p>Behandeling van ingegroeide nagels, dikke nagels, kalk nagels en andere nagelklachten met deskundige zorg en advies voor thuisverzorging.</p>
                 </div>
 
                 <div class="dienst-card">
@@ -353,9 +353,9 @@
                     <h3>Vakkundig & Hygiënisch</h3>
                     <p>Professionele werkwijze met oog voor detail en hygiëne</p>
                 </div>
-                <div class="voordeel">
-                    <h3>Betaalbaar</h3>
-                    <p>Eerlijke prijzen voor kwaliteit voetverzorging</p>
+				<div class="voordeel">
+                    <h3>Gezellig</h3>
+                    <p>Een praatje of gewoon even rusten, het mag allebij</p>
                 </div>
             </div>
         </section>
@@ -372,12 +372,15 @@
                     </p>
                     <p style="color: var(--bruin); line-height: 1.8; margin-bottom: 1rem;">
                         Bij Sierlijke Voeten draait het om meer dan alleen voetverzorging. Het gaat om 
-                        aandacht, luisteren naar uw klachten en het bieden van oplossingen die werken. 
+                        aandacht, luisteren naar uw klachten of gedachten en het bieden van oplossingen die werken. 
                         Elke behandeling wordt met zorg uitgevoerd in een ontspannen sfeer.
                     </p>
                     <p style="color: var(--bruin); line-height: 1.8;">
                         Of u nu komt voor een reguliere behandeling, last heeft van likdoorns of eelt, 
                         of gewoon wilt genieten van een ontspannende voetmassage - u bent van harte welkom!
+						
+						Momenteel verhuisd naar de Jachtlaan 12, in de G&W (Gezondheidswinkel). Alles bevindt zich op de begane grond, dus het is zeer toegankelijk!
+						Voorheen moesten we eerst de trap op, dus dit is een mooie vooruitgang.
                     </p>
                 </div>
             </div>
@@ -402,6 +405,10 @@
                 <div class="contact-item">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
                     <span>Ma t/m Vr: 9:00 - 17:00 | Za: op afspraak</span>
+                </div>
+                <div class="contact-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                    <a href="https://www.facebook.com/p/Pedicure-Sierlijke-Voeten-100057386533044/" target="_blank" style="color: var(--wit); text-decoration: none;">Volg mij op Facebook</a>
                 </div>
                 <p style="margin-top: 2rem; font-style: italic;">
                     Alleen op afspraak - bel voor een afspraak - mail voor overige vragen.
