Medische weg gehaald.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sierlijke Voeten - Medische Pedicure in Delfzijl</title>
+    <title>Sierlijke Voeten - Pedicure in Delfzijl</title>
     <style>
         * {
             margin: 0;
@@ -329,7 +329,7 @@
 
     <section id="home" class="hero">
         <h1>Welkom bij Sierlijke Voeten</h1>
-        <p>Medische voetverzorging met vakkundigheid en persoonlijke aandacht</p>
+        <p>voetverzorging met vakkundigheid en persoonlijke aandacht</p>
         <a href="#contact" class="cta-button">Maak een Afspraak</a>
     </section>
 
@@ -342,8 +342,8 @@
                     <p style="color: var(--bruin); line-height: 1.8;">Alle behandelingen voor gezonde en verzorgde voeten</p>
                 </div>
                 <div class="visual-card">
-                    <img src="medische-pedicure.png" alt="Medische pedicure">
-                    <p style="color: var(--bruin); line-height: 1.8;">Vakkundige medische voetverzorging met aandacht voor detail</p>
+                    <img src="medische-pedicure.png" alt="pedicure">
+                    <p style="color: var(--bruin); line-height: 1.8;">Vakkundige voetverzorging met aandacht voor detail</p>
                 </div>
                 <div class="visual-card">
                     <img src="professional-care.png" alt="Professional foot care">
@@ -355,12 +355,12 @@
         <section id="diensten" class="section">
             <h2>Mijn Diensten</h2>
             <p style="text-align: center; color: var(--bruin); max-width: 800px; margin: 0 auto 2rem;">
-                Gespecialiseerd in medische voetverzorging voor gezonde en comfortabele voeten
+                Gespecialiseerd in voetverzorging voor gezonde en comfortabele voeten
             </p>
             
             <div class="diensten-grid">
                 <div class="dienst-card">
-                    <h3><span class="emoji">✂️</span> Medische Pedicure</h3>
+                    <h3><span class="emoji">✂️</span> Pedicure</h3>
                     <p>Professionele voetverzorging waarbij nagelriemen verzorgd worden, nagels worden geknipt en gevijld, en de voeten grondig worden gereinigd. Ideaal voor het behouden van gezonde zachte voeten.</p>
                 </div>
 
@@ -396,7 +396,7 @@
             <div class="voordelen">
                 <div class="voordeel">
                     <h3>⭐ Jarenlange Ervaring</h3>
-                    <p>Arifa heeft uitgebreide ervaring in medische voetverzorging</p>
+                    <p>Arifa heeft uitgebreide ervaring in voetverzorging</p>
                 </div>
                 <div class="voordeel">
                     <h3>🤝 Persoonlijke Aandacht</h3>
@@ -471,7 +471,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Sierlijke Voeten - Medische Pedicure | KvK: [nummer]</p>
+        <p>&copy; 2025 Sierlijke Voeten - Pedicure | KvK: [nummer]</p>
         <p style="margin-top: 0.5rem; font-size: 0.9rem;">Uw voeten in vertrouwde handen</p>
     </footer>
 
