header fixed; img folder added

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             }
 
             .hero {
-                padding: 180px 2rem 100px;
+                padding: 280px 2rem 100px;
             }
 
             .hero h1 {
@@ -314,7 +314,7 @@
         <nav>
             <div class="logo">
                 <div class="logo-icon">
-                    <img src="logo.png" alt="Sierlijke Voeten Logo">
+                    <img src="img/logo.png" alt="SV">
                 </div>
                 <span>Sierlijke Voeten</span>
             </div>
@@ -338,15 +338,15 @@
             <h2>Professionele Voetverzorging</h2>
             <div class="visual-section">
                 <div class="visual-card">
-                    <img src="diensten-overzicht.png" alt="Overzicht van diensten">
+                    <img src="img/diensten-overzicht.png" alt="Overzicht van diensten">
                     <p style="color: var(--bruin); line-height: 1.8;">Alle behandelingen voor gezonde en verzorgde voeten</p>
                 </div>
                 <div class="visual-card">
-                    <img src="medische-pedicure.png" alt="pedicure">
+                    <img src="img/medische-pedicure.png" alt="pedicure">
                     <p style="color: var(--bruin); line-height: 1.8;">Vakkundige voetverzorging met aandacht voor detail</p>
                 </div>
                 <div class="visual-card">
-                    <img src="professional-care.png" alt="Professional foot care">
+                    <img src="img/professional-care.png" alt="Professional foot care">
                     <p style="color: var(--bruin); line-height: 1.8;">Gecertificeerde zorg in een ontspannen omgeving</p>
                 </div>
             </div>
