--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
             <h2>Over Arifa</h2>
             <div class="over-mij">
                 <div class="over-mij-content">
-                    <h3>Ervaren Medisch Pedicure</h3>
+                    <h3>Ervaren Pedicure</h3>
                     <p style="color: var(--bruin); line-height: 1.8; margin-bottom: 1rem;">
-                        <span class="intro-name">Arifa</span> is een ervaren medisch pedicure met jarenlange ervaring in voetverzorging. 
+                        <span class="intro-name">Arifa</span> is een ervaren pedicure met jarenlange ervaring in voetverzorging. 
                         Zij staat voor vakkundigheid, persoonlijke aandacht en een warm welkom. Arifa begrijpt dat gezonde voeten 
                         essentieel zijn voor uw algehele welzijn en mobiliteit.
                     </p>
