fotos weg gehaald

--- a/index.html
+++ b/index.html
@@ -338,15 +338,15 @@
             <h2>Professionele Voetverzorging</h2>
             <div class="visual-section">
                 <div class="visual-card">
-                    <img src="img/diensten-overzicht.png" alt="Overzicht van diensten">
+                    <img src="" alt="Overzicht van diensten">
                     <p style="color: var(--bruin); line-height: 1.8;">Alle behandelingen voor gezonde en verzorgde voeten</p>
                 </div>
                 <div class="visual-card">
-                    <img src="img/medische-pedicure.png" alt="pedicure">
+                    <img src="" alt="pedicure">
                     <p style="color: var(--bruin); line-height: 1.8;">Vakkundige voetverzorging met aandacht voor detail</p>
                 </div>
                 <div class="visual-card">
-                    <img src="img/professional-care.png" alt="Professional foot care">
+                    <img src="" alt="Professional foot care">
                     <p style="color: var(--bruin); line-height: 1.8;">Gecertificeerde zorg in een ontspannen omgeving</p>
                 </div>
             </div>
