--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Sierlijke Voeten - Pedicure | KvK: [nummer]</p>
+        <p>&copy; 2025 Sierlijke Voeten - Pedicure | KvK: 65341147</p>
         <p style="margin-top: 0.5rem; font-size: 0.9rem;">Uw voeten in vertrouwde handen</p>
     </footer>
 
